extras/postgres/postgres/templates/network-policy.yaml
# Copyright (C) 2022 - present Juergen Zimmermann, Hochschule Karlsruhe
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

apiVersion: networking.k8s.io/v1
# https://kubernetes.io/docs/concepts/services-networking/network-policies
kind: NetworkPolicy
metadata:
  name: { { include "postgres.fullname" . } }
  namespace: { { .Values.namespace } }
spec:
  podSelector:
    matchLabels: { { - include "postgres.selectorLabels" . | nindent 6 } }
  policyTypes: [Ingress, Egress]
  egress: []
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: buch
              app.kubernetes.io/name: buch
              app.kubernetes.io/instance: buch
      ports:
        - port: { { .Chart.Name } }
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              { { - include "pgadmin.selectorLabels" . | nindent 14 } }
      ports:
        - port: { { .Chart.Name } }
          protocol: TCP
